email-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app:  kyc-email-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-email-service
  template:
    metadata:
      labels:
        app:  kyc-email-service
    spec:
      containers:
        - name: kyc-email-service
          image: phoeberael/email-service
          ports:
            - containerPort: 8082

---
            
apiVersion: v1
kind: Service
metadata:
  name: kyc-email-service
spec:
  type: ClusterIP
  selector:
    app: kyc-email-service
  ports:
    - port: 8082
      targetPort: 8082
