kyc-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app:  kyc-frontend
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-frontend
  template:
    metadata:
      labels:
        app:  kyc-frontend
    spec:
      containers:
        - name: frontend
          image: phoeberael/kyc-customer-frontend
          ports:
            - containerPort: 80
            
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: kyc-frontend
  ports:
  - protocol: TCP
    port: 80
