report-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-frontend
  labels:
    app:  kyc-report-frontend
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-report-frontend
  template:
    metadata:
      labels:
        app:  kyc-report-frontend
    spec:
      containers:
        - name: report-frontend
          image: phoeberael/kyc-report-front-end
          ports:
            - containerPort: 80
            
---

apiVersion: v1
kind: Service
metadata:
  name: report-frontend
spec:
  type: NodePort
  selector:
    app: kyc-report-frontend
  ports:
  - protocol: TCP
    nodePort: 32070
    port: 80
