report-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  labels:
    app:  kyc-report-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  kyc-report-service
  template:
    metadata:
      labels:
        app:  kyc-report-service
    spec:
      containers:
        - name: kyc-report-service
          image: cecillwala/kyc-report-service
          ports:
            - containerPort: 8083

---
            
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  type: ClusterIP
  selector:
    app: kyc-report-service
  ports:
    - port: 8083
      targetPort: 8083
