backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Requested-With"
    
spec:
  ingressClassName: nginx
  rules:
    - host: phoebekyc.site
      http:
        paths:
          - path: /kyc
            pathType: Prefix
            backend:
              service:
                name: api-gateway-external
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: api-gateway-external
                port:
                  number: 8080
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server-external
                port:
                  number: 9099
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-external
                port:
                  number: 15672
